// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu Should keep existing inline styles 1`] = `
<div
  aria-disabled={false}
  className="menu menu_width_limited menu_theme_normal menu_view_classic"
  data-lego="react"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  style={
    Object {
      "background": "red",
      "maxWidth": "42px",
    }
  }
/>
`;

exports[`Menu Should render menu with custom limited width 1`] = `
<div
  aria-disabled={false}
  className="menu menu_width_limited menu_theme_normal menu_view_classic"
  data-lego="react"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  style={
    Object {
      "maxWidth": "42px",
    }
  }
/>
`;

exports[`Menu Should render menu with default limited width 1`] = `
<div
  aria-disabled={false}
  className="menu menu_width_limited menu_theme_normal menu_view_classic"
  data-lego="react"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  style={Object {}}
/>
`;
